--- a/sample-2/style.scss
+++ b/sample-2/style.scss
@@ -22,7 +22,6 @@ $c-darkgray : darkgray;
 .padd-stand { padding-top: 16px; padding-bottom: 16px; }
 .padd-stand-48 { padding-top: 48px; padding-bottom: 48px; }
 .clearfix::after { content: ""; display: block; clear: both }
-
 * {
     margin: 0;
     padding: 0;   
@@ -62,25 +61,23 @@ a {
     // border: 1px solid chartreuse;
 }
 .wrapper {
-    max-width: 1200px;
+    max-width: 1440px;
+}
+.wrapper-content {
+    max-width: 1340px;
+}
+.wrapper, .wrapper-content {
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    // border: 1px solid red;
 }
-.wrapper-no-overflow {
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    // background-color: rgba(255, 0, 0, .2);
-}
-
 header {
     background-color: $c-darkblue;
-    // box-shadow: 0px 4px 0px 16px rgba(0, 0, 0, .2);
-    // border: 1px solid greenyellow;
+    padding-left: 48px;
+    padding-right: 48px;
     position: relative;
-    z-index: 100;    
+    z-index: 100;
 }
 .navigation {
     // border: 1px solid red;
@@ -106,6 +103,8 @@ header {
 }
 .logo {
     float: left;
+    padding-top: 8px;
+    padding-bottom: 8px;
     img {
         max-width: 100%;
     }
@@ -139,39 +138,42 @@ header {
     height: 544px;
     background-image: linear-gradient(rgba(5, 5, 10, .3) 1%, rgba(0,0,0,0) 3%, rgba(0,0,0,0) 97%, rgba(5, 5, 10, .3) 99%);
 }
-.banner-content-base {
+.wrapper-banner {
     position: absolute;
-    height: 544px; 
-    width: 100%; 
-    top: 0; 
-    left: 0; 
-    z-index: 150; 
-    padding: 0 8px;    
-}
-.banner-content-frame {
-    position:relative;
+    left: 0;
+    right: 0;
+    top: 0;
     height: 544px;
 }
 .banner-buttons {
     position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 100;
     width: 100%;
     height: 100%;
     img[id="bt-prv"] {
         position: absolute;
         top: 50%;
-        left: 0;
+        left: 8px;
     }
     img[id="bt-nxt"] {
         position: absolute;
         top: 50%;
-        right: 0;
+        right: 8px;
     }
+}
+.wrapper-banner-content {
+    position: relative; left: 0; right: 0; top: 0; height: 544px;
 }
 .banner-content {
     position: absolute;
+    width: 100%;
     z-index: 100;
     padding-top: 48px;
+    padding-left: 48px;
+    padding-right: 48px;
     top: 40%;
     p {
         line-height: 1.4em;
@@ -194,10 +196,14 @@ header {
 
 .features {
     background-color: $c-deepblue;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .feature {
-    @extend .padd-side;
+    // @extend .padd-side;
     width: 33.33%;
+    padding-left: 18px;
+    padding-right: 18px;
     float: left;
     img {
         float: left;
@@ -216,12 +222,19 @@ header {
 
 .infos {
     background-color: $c-dark;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.layout-2 {
+    display: none;
 }
 .info {
-    @extend .padd-side;
+    // @extend .padd-side;
     width: 33.33%;
     float: left;
     // border: 1px solid greenyellow;
+    padding-left: 24px;
+    padding-right: 24px;
 
     h2 {
         margin-bottom: 16px;
@@ -234,7 +247,7 @@ header {
     padding-top: 16px;
 }
 .info-quote {
-    padding: 0;
+    // padding: 0;
     p{
         padding: 32px 16px;
     }
@@ -257,10 +270,9 @@ header {
     right: 0;
     transform: skewY(-30deg);
     z-index: 1;
-
-    // transform: rotate(-20deg);
 }
 .info-app-store {
+    padding-right: 0;
     div {
         float: left;
     }
@@ -272,29 +284,111 @@ header {
         }
     }
 }
-
+.bottom-format-2 {
+    display: none;
+}
 footer {
-    > div{
+    padding-left: 64px;
+    padding-right: 64px;
+    .bottom-links {
         float: left;
+        margin-top: 16px;
     }
-    div:last-child{
+    .bottom-links div {
+        div {
+            margin-bottom: 16px;            
+        }
+        span {
+            margin: 0 10px;
+        }
+    }
+    .others{
         float: right;
         img {
             @extend .padd-side;
-            margin-top: -16px;
+            padding-left: 0;
+            // margin-top: -16px;
             max-width: 100%;
         }
-    }
-}
-.bottom-links {
-    margin-bottom: 16px;
-    span {
-        margin: 0 10px;
+        img:first-child {
+            padding-bottom: 10px;
+        }
     }
 }
 .nav-menu-compact {
     display: none;
 }
+@media (max-width: 1024px) {
+    .feature {
+        width: 80%;
+        text-align: center;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 48px;
+        img, h1 {
+            float: none;
+        }
+    }
+    .layout-1 {
+        display: none;
+    }
+    .layout-2 {
+        display: block;
+    }
+    .info {
+        width: 50%;
+    }
+    .info-contact {
+        clear: both;
+        float: none;
+        width: 100%;
+        text-align: center;
+        h2 {
+            margin-top: 64px;
+        }
+    }
+}
+@media (max-width: 950px) {
+    footer {
+        // border: 1px solid red;
+        img {
+            width: 150px;
+            // border: 1px solid greenyellow;
+        }
+    }
+}
+@media (max-width: 850px) {
+    footer {
+        padding-left: 16px;
+        padding-right: 16px;
+        .bottom-format-2 {
+            display: block;
+            // border: 1px solid red;
+        }
+        .others{
+            float: none;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            img {
+                float: none;
+                padding-left: 0;
+                padding-right: 8px;
+            }
+        }
+        .bottom-links {
+            float: none;
+            div, p {
+                text-align: center;
+            }
+        }
+        .bottom-format-1 {
+            display: none;
+        }
+    }
+}
+/* 800 Start */
 @media (max-width: 800px) {
     nav {
         display: none;
@@ -306,7 +400,7 @@ footer {
         display: block;
         float: right;
         clear: both;
-        margin-top: 24px;
+        margin-top: 16px;
         // border: 1px solid pink;
         float: right;
         div {
@@ -317,13 +411,63 @@ footer {
         }
     }
 
+    .banner-buttons { display: none; }
+
     .logo {
         img {
             width: 50%;
         }
+    } 
+    header, .banner-content {
+        padding-left: 32px;
+        padding-right: 32px;
+        top: 30%;
+    }
+    .banner-content {
+        top: 30%;
     }
 }
+/* 800 End */
 
+@media (max-width: 690px){
+    .info {
+        width: 100%;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .info-app-store {
+        overflow: hidden;
+    }
+}
+@media (max-width: 500px) {
+    #learn-button-big {
+        background-image: linear-gradient(white 50%, $c-ivory 50%);
+        font-weight: 300;
+        font-size: 18px;
+        padding: 8px 16px;
+        width: 180px;
+    }
+    header, .banner-content {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .banner-content {
+        top: 20%;
+    }
+    .features {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .card {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+    .infos {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
 @media (max-width: 425px){
     .banner-buttons { display: none }
     .info, .feature {
@@ -331,5 +475,23 @@ footer {
         padding-left: 16px;
         padding-right: 16px;
         margin-bottom: 32px;
+    }
+    .info-app-store {
+        padding-right: 0;
+        div:last-child img {
+            // border: 2px solid red;
+            width: 108px;
+        }
+    }
+    footer .others{
+        img {
+            width: 128px;
+        }
+    }
+}
+
+@media (max-width: 425px){
+    .banner-content {
+        top: 10%;
     }
 }
