--- a/sample-1/style-bs.css
+++ b/sample-1/style-bs.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Roboto', 'sans-serif' !important;
 }
 
+.btn:hover {
+  cursor: pointer;
+  background-color: #3B55EA;
+}
+
 .bg-gradient {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#AFD1FE), to(white));
   background-image: linear-gradient(#AFD1FE, white);
@@ -60,22 +65,28 @@ body {
 .feature-btn {
   color: white !important;
   background-color: #3B5576;
-  width: 96px;
+  width: 50%;
   padding: 8px 24px;
-  font-size: 12px;
+  font-size: 16px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300 !important;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 32px;
+}
+
+.feature-btn:hover {
+  background-color: #4d6686;
+  cursor: pointer;
 }
 
 .card-p {
   font-weight: 300;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
   margin-top: 20px;
   margin-bottom: 20px;
-  min-height: 80px;
+  min-height: 120px;
 }
 
 footer {
@@ -89,7 +100,7 @@ footer {
 }
 
 .copyright p {
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   margin-bottom: 0;
 }
@@ -101,5 +112,41 @@ footer {
 .socials img {
   width: 24px;
   margin: 4px;
+}
+
+@media (max-width: 575.85px) {
+  nav h1 {
+    font-size: 28px;
+    margin-top: 6px;
+    margin-bottom: 0;
+    margin-right: 0;
+  }
+  .hero-content {
+    width: 60%;
+  }
+  .hero-content h1 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 370px) {
+  nav h1 {
+    font-size: 24px;
+  }
+  .hero-content {
+    width: 70%;
+  }
+  .logo {
+    display: none !important;
+  }
+}
+
+@media (max-width: 768.98px) {
+  .card-p {
+    min-height: 0;
+  }
+  .feature-btn {
+    margin-bottom: 48px;
+  }
 }
 /*# sourceMappingURL=style-bs.css.map */
